--- a/logica-js-1/index.html
+++ b/logica-js-1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Día 1</title>
+    <title>Lógica JS 1/7: Operaciones Booleanas</title>
 </head>
 <body>
     <script src="script.js"></script>
