--- a/logica-js-1/index.html
+++ b/logica-js-1/index.html
@@ -6,6 +6,6 @@
     <title>Lógica JS 1/7: Operaciones Booleanas</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
